--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,54 @@
+@import url("https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,400;0,700;1,700&family=Open+Sans:wght@300&family=Permanent+Marker&family=Quicksand:wght@300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&display=swap");
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html {
+  font-size: 62.5%;
+  scroll-behavior: smooth;
+  font-family: "Quicksand", sans-serif;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #1e1e1e;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.rhap_play-status--playing .rhap_progress-filled {
+  background-color: #facd66;
+}
+.rhap_play-status--playing .rhap_volume-indicator {
+  background-color: #facd66;
+}
+.rhap_play-status--paused .rhap_progress-filled {
+  background-color: #facd66;
+}
+.rhap_play-status--paused .rhap_volume-indicator {
+  background-color: #facd66;
+}
+.rhap_play-status--playing .rhap_progress-indicator {
+  background-color: #facd66;
+}
+.rhap_play-status--paused .rhap_progress-indicator {
+  background-color: #facd66;
+}
+.rhap_play-status--playing .rhap_play-pause-button {
+  background-color: #facd66;
+  border-radius: 50%;
+  outline: none;
+  border: none;
+}
+.rhap_play-status--paused .rhap_play-pause-button {
+  background-color: #facd66;
+  border-radius: 50%;
+  outline: none;
+  border: none;
 }
