--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ html {
   font-size: 62.5%;
   scroll-behavior: smooth;
   font-family: "Quicksand", sans-serif;
+  color: white;
 }
 
 body {
@@ -15,6 +16,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #1e1e1e;
+}
+body p {
+  font-size: 1.6rem;
 }
 
 code {
@@ -51,4 +55,10 @@ code {
   border-radius: 50%;
   outline: none;
   border: none;
+}
+.rhap_play-status--playing .rhap_time {
+  color: white;
+}
+.rhap_play-status--paused .rhap_time {
+  color: white;
 }
